--- a/index.html
+++ b/index.html
@@ -37,33 +37,35 @@
             <h3 class="qoute secondary-shadow-0-0 sub-left">- who said it</h3>
          </div>
       </section>
-         <header class="sticky-top">
-            <nav class="navbar navbar-expand-lg primary-color-0-1 navbar-expand navbar-dark bd-navbar sticky-top">
-               <div class="container-fluid">
-                  <a class="navbar-brand primary-color-1-0 p-0 me-0 me-lg-2" href="#">
-                     <img src="favicon.ico" width="30" height="30" class='d-inline-block align-left' , alt="icon">
-                     Ari Lavine
-                  </a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                     aria-expanded="false" aria-label="Toggle navigation"><span
-                        class="navbar-toggler-icon"></span></button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                     <ul class="nav justify-content-center nav-fill w-100">
-                        <li class="nav-item"><a class="nav-link active primary-color-1-0" aria-current="page"
-                              href="index.html"><h3>Home</h3></a></li>
-                        <li class="nav-item"><a class="nav-link active primary-color-1-0" aria-current="page"
-                              href="#about-me"><h3>About Me</h3></a></li>
-                        <!-- <li class="nav-item"><a class="nav-link" href="joke.html">Here's A joke!</a></li>
-                           <li class="nav-item"><a class="nav-link" href="sigh.html">Dogs!</a></li> -->
-                        <li class="nav-item"><a class="nav-link primary-color-1-0" href="mailto:alavine171@gmail.com"
-                              target="_blank" rel="nofollow noopener" title="Send Email"><h3>Send Email</h3></a></li>
-                        <!-- <li class="nav-item"><a class="nav-link" href="fourohfour.html">Page Not Found</a></li> -->
-                     </ul>
-                  </div>
+      <header class="sticky-top">
+         <nav class="navbar navbar-expand-lg primary-color-0-1 navbar-expand navbar-dark bd-navbar sticky-top">
+            <div class="container-fluid">
+               <a class="navbar-brand primary-color-1-0 p-0 me-0 me-lg-2" href="#">
+                  <img src="favicon.ico" width="30" height="30" class='d-inline-block align-left' , alt="icon">
+                  Ari Lavine
+               </a>
+               <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                  aria-expanded="false" aria-label="Toggle navigation"><span
+                     class="navbar-toggler-icon"></span></button>
+               <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="nav justify-content-center nav-fill w-100">
+                     <li class="nav-item"><a class="nav-link active primary-color-1-0" aria-current="page"
+                           href="index.html"><h3>Home</h3></a></li>
+                     <li class="nav-item"><a class="nav-link active primary-color-1-0" aria-current="page"
+                           href="#about-me"><h3>About Me</h3></a></li>
+                     <li class="nav-item"><a class="nav-link active primary-color-1-0" aria-current="page"
+                           href="#portfolio"><h3>Portfolio</h3></a></li>
+                     <!-- <li class="nav-item"><a class="nav-link" href="joke.html">Here's A joke!</a></li>
+                        <li class="nav-item"><a class="nav-link" href="sigh.html">Dogs!</a></li> -->
+                     <li class="nav-item"><a class="nav-link primary-color-1-0" href="mailto:alavine171@gmail.com"
+                           target="_blank" rel="nofollow noopener" title="Send Email"><h3>Send Email</h3></a></li>
+                     <!-- <li class="nav-item"><a class="nav-link" href="fourohfour.html">Page Not Found</a></li> -->
+                  </ul>
                </div>
-            </nav>
-         </header>
+            </div>
+         </nav>
+      </header>
       <section data-class="primary-color-3-1" id="about-me" data-color="#042334">
          <img src="blue_moon.png" class="blue-moon left-moon" alt="Moon">
          <div class="info-boxes-container">
@@ -93,7 +95,20 @@
          </div>
       </section>
 
-      <section data-class="primary-color-1-1" data-color="#F5F1ED"></section>
+      <section data-class="primary-color-1-1" id="portfolio" data-color="#F5F1ED">
+         <h1 class="primary-color-0-0">My Projects</h1>
+         <div class="boxes-container">
+            <div class="box"><img src="imgs/python.png" height="100%"></div>
+
+            <div class="box primary-color-0-1"></div>
+            <div class="box primary-color-0-1"></div>
+
+            <div class="box primary-color-0-1"></div>
+            <div class="box primary-color-0-1"></div>
+            <div class="box primary-color-0-1"></div>
+            <div class="box primary-color-0-1"></div>
+         </div>
+      </section>
       <section data-class="secondary-color-0-1" data-color="#779287"></section>
       <section data-class="secondary-color-1-1" data-color="#8D0801"></section>
    </div>
