Added portfolio starter (actual content requried)

--- a/index.html
+++ b/index.html
@@ -96,17 +96,106 @@
       </section>
 
       <section data-class="primary-color-1-1" id="portfolio" data-color="#F5F1ED">
-         <h1 class="primary-color-0-0">My Projects</h1>
+         <h1 class="primary-color-0-0 portfolio-header">My Projects</h1>
          <div class="boxes-container">
-            <div class="box"><img src="imgs/python.png" height="100%"></div>
-
-            <div class="box primary-color-0-1"></div>
-            <div class="box primary-color-0-1"></div>
-
-            <div class="box primary-color-0-1"></div>
-            <div class="box primary-color-0-1"></div>
-            <div class="box primary-color-0-1"></div>
-            <div class="box primary-color-0-1"></div>
+            <div class="box primary-color-0-1">
+                <div class="title-container">
+                    <h2>Python Project</h2>
+                </div>
+                <div class="content-container">
+                    <div class="image-container">
+                      <img src="imgs/python.png" alt="Your Image">
+                    </div>
+                    <div class="text-container">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Rhoncus mattis rhoncus urna neque. Augue mauris augue neque gravida.</p>
+                    </div>
+                </div>
+                <div class="footer-container">
+                    <p>Augue interdum velit euismod in pellentesque massa. Fringilla urna porttitor rhoncus dolor purus non enim. Gravida cum sociis natoque penatibus et. In metus vulputate eu scelerisque felis imperdiet. Tellus molestie nunc non blandit massa enim nec. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Sit amet risus</p>
+                </div>
+                  
+            </div> 
+            <div class="box primary-color-0-1">
+                <div class="title-container">
+                    <h2>Java Project</h2>
+                </div>
+                <div class="content-container">
+                    <div class="image-container">
+                      <img src="imgs/java.png" alt="Your Image">
+                    </div>
+                    <div class="text-container">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Rhoncus mattis rhoncus urna neque. Augue mauris augue neque gravida.</p>
+                    </div>
+                </div>
+                <div class="footer-container">
+                    <p>Augue interdum velit euismod in pellentesque massa. Fringilla urna porttitor rhoncus dolor purus non enim. Gravida cum sociis natoque penatibus et. In metus vulputate eu scelerisque felis imperdiet. Tellus molestie nunc non blandit massa enim nec. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Sit amet risus</p>
+                </div>
+            </div>
+    
+            <div class="box primary-color-0-1">
+                <div class="title-container">
+                    <h2>HTML/CSS Project</h2>
+                </div>
+                <div class="content-container">
+                    <div class="image-container">
+                      <img src="imgs/htcsjs-removebg-preview.png" alt="Your Image">
+                    </div>
+                    <div class="text-container">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Rhoncus mattis rhoncus urna neque. Augue mauris augue neque gravida.</p>
+                    </div>
+                </div>
+                <div class="footer-container">
+                    <p>Augue interdum velit euismod in pellentesque massa. Fringilla urna porttitor rhoncus dolor purus non enim. Gravida cum sociis natoque penatibus et. In metus vulputate eu scelerisque felis imperdiet. Tellus molestie nunc non blandit massa enim nec. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Sit amet risus</p>
+                </div>
+            </div>
+            <div class="box primary-color-0-1">
+                <div class="title-container">
+                    <h2>SQL Project</h2>
+                </div>
+                <div class="content-container">
+                    <div class="image-container">
+                      <img src="imgs/sqld.png" alt="Your Image">
+                    </div>
+                    <div class="text-container">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Rhoncus mattis rhoncus urna neque. Augue mauris augue neque gravida.</p>
+                    </div>
+                </div>
+                <div class="footer-container">
+                    <p>Augue interdum velit euismod in pellentesque massa. Fringilla urna porttitor rhoncus dolor purus non enim. Gravida cum sociis natoque penatibus et. In metus vulputate eu scelerisque felis imperdiet. Tellus molestie nunc non blandit massa enim nec. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Sit amet risus</p>
+                </div>
+            </div>
+            <div class="box primary-color-0-1">
+                <div class="title-container">
+                    <h2>JS Project</h2>
+                </div>
+                <div class="content-container">
+                    <div class="image-container">
+                      <img src="imgs/js.png" alt="Your Image">
+                    </div>
+                    <div class="text-container">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Rhoncus mattis rhoncus urna neque. Augue mauris augue neque gravida.</p>
+                    </div>
+                </div>
+                <div class="footer-container">
+                    <p>Augue interdum velit euismod in pellentesque massa. Fringilla urna porttitor rhoncus dolor purus non enim. Gravida cum sociis natoque penatibus et. In metus vulputate eu scelerisque felis imperdiet. Tellus molestie nunc non blandit massa enim nec. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Sit amet risus</p>
+                </div>
+            </div>
+            <div class="box primary-color-0-1">
+                <div class="title-container">
+                    <h2>C# Project</h2>
+                </div>
+                <div class="content-container">
+                    <div class="image-container">
+                      <img src="imgs/seesharp.png" alt="Your Image">
+                    </div>
+                    <div class="text-container">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Rhoncus mattis rhoncus urna neque. Augue mauris augue neque gravida.</p>
+                    </div>
+                </div>
+                <div class="footer-container">
+                    <p>Augue interdum velit euismod in pellentesque massa. Fringilla urna porttitor rhoncus dolor purus non enim. Gravida cum sociis natoque penatibus et. In metus vulputate eu scelerisque felis imperdiet. Tellus molestie nunc non blandit massa enim nec. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Sit amet risus</p>
+                </div>
+            </div>
          </div>
       </section>
       <section data-class="secondary-color-0-1" data-color="#779287"></section>
