--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
          </div>
       </section>
 
-      <section data-class="primary-color-1-1" id="portfolio" data-color="#F5F1ED">
+      <section data-class="primary-color-1-1" id="portfolio" data-color="#ADB2C2">
          <h1 class="primary-color-0-0 portfolio-header">My Projects</h1>
          <div class="boxes-container">
             <div class="box primary-color-0-1">
@@ -218,7 +218,7 @@
          index += 1;
       })
    })
-   document.getElementById('stars').classList.add(new Date().getHours() >= 12 ? 'starry-background' : '');
+   document.getElementById('stars').classList.add(new Date().getHours() >= 18 ? 'starry-background' : ''); //starts at 6pm, might make it noon? idk
 </script>
 
 </html>
