--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <img src="tag16_05_00000 (1).png" style="object-fit: contain; height:101%" alt="Moon">
          </div>
          <div class="qoutes-container">
-            <h3 class="qoute secondary-shadow-0-0 right">“a quote goes here and it will be long so it looks kinda like this”</h3>
-            <h3 class="qoute secondary-shadow-0-0 sub-right">- who said it</h3>
-            <h3 class="qoute secondary-shadow-0-0 left">“a quote goes here and it will be long so it looks kinda like this”</h3>
-            <h3 class="qoute secondary-shadow-0-0 sub-left">- who said it</h3>
+            <h3 class="qoute secondary-shadow-0-0 right">“We do this not because it was easy, but because we thought it to be easy”</h3>
+            <h3 class="qoute secondary-shadow-0-0 sub-right">- The Creed</h3>
+            <h3 class="qoute secondary-shadow-0-0 left">“The way to get started is to quit talking and begin doing.”</h3>
+            <h3 class="qoute secondary-shadow-0-0 sub-left">- Walt Disney</h3>
          </div>
       </section>
       <header class="sticky-top">
@@ -76,20 +76,20 @@
             </div>
             <div class="rect-box secondary-shadow-1-0">
                <h2 class="primary-color-1-0">Personal</h2>
-               <h3 class="primary-color-0-0">info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info </h3>
+               <h3 class="primary-color-0-0">I'm Ari! I love to code, and have enjoyed it ever since I was introduced in 2021 by my teachers. I'm based out of Cambridge MA, and hope to learn more about the world via code.</h3>
             </div>
             <div class="rect-box secondary-color-0-1">
                <h2 class="primary-color-1-0">Education</h2>
-               <h3 class="primary-color-0-0">info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info </h3>
+               <h3 class="primary-color-0-0">I'm in the CRLS class of 2025, and am taking RSTA classes for IT and CS. I've also taken some Harvard classes via HES and dual enrollment/auditing.</h3>
             </div>
             <div class="rect-box secondary-shadow-1-0">
                <h2 class="primary-color-1-0">Experience</h2>
-               <h3 class="primary-color-0-0">info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info </h3>
+               <h3 class="primary-color-0-0">I've had a few retail-type jobs, and I also have done a considerable amount of volunteer work with Cambridge Neighbors, helping seniors with tech.</h3>
      
             </div>
             <div class="rect-box secondary-color-0-1">
                <h2 class="primary-color-1-0">Coding</h2>
-               <h3 class="primary-color-0-0">info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info </h3>
+               <h3 class="primary-color-0-0">There is a satisfaction to be derived from coding, how I can enjoy the creation of things that are entirely new. Code is my personal favorite artform.</h3>
             </div>
             
          </div>
