--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&family=Bebas+Neue&display=swap" rel="stylesheet">
-      
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body style="background-color: black !important;">
@@ -58,8 +58,7 @@
                            href="#portfolio"><h3>Portfolio</h3></a></li>
                      <!-- <li class="nav-item"><a class="nav-link" href="joke.html">Here's A joke!</a></li>
                         <li class="nav-item"><a class="nav-link" href="sigh.html">Dogs!</a></li> -->
-                     <li class="nav-item"><a class="nav-link primary-color-1-0" href="mailto:alavine171@gmail.com"
-                           target="_blank" rel="nofollow noopener" title="Send Email"><h3>Send Email</h3></a></li>
+                     <li class="nav-item"><a class="nav-link primary-color-1-0" href="#contact"><h3>Contact Me</h3></a></li>
                      <!-- <li class="nav-item"><a class="nav-link" href="fourohfour.html">Page Not Found</a></li> -->
                   </ul>
                </div>
@@ -164,7 +163,7 @@
                     <p>Augue interdum velit euismod in pellentesque massa. Fringilla urna porttitor rhoncus dolor purus non enim. Gravida cum sociis natoque penatibus et. In metus vulputate eu scelerisque felis imperdiet. Tellus molestie nunc non blandit massa enim nec. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Sit amet risus</p>
                 </div>
             </div>
-            <div class="box primary-color-0-1">
+            <div class="box primary-color-0-1"  style="cursor: pointer;" onclick="window.location='';">
                 <div class="title-container">
                     <h2>JS Project</h2>
                 </div>
@@ -198,7 +197,10 @@
             </div>
          </div>
       </section>
-      <section data-class="secondary-color-0-1" data-color="#779287"></section>
+      <section target="_blank" rel="nofollow noopener" data-class="secondary-color-0-1" id="contact" style="display: flex; flex-direction:column; justify-content: center;" data-color="#042334">
+        <a style="margin:auto; " title="Contacting Ari" href="mailto:alavine171@gmail.com"><img src="Contact.png"></a>
+        <a href="https://66a4e5a8-d05c-4056-8f44-1d5a47ab5efb-00-89kpnsddjqfz.kirk.replit.dev/"><p  style="font-size: 2rem; color:white; margin-right:auto;align-self:flex-end">Design by Lyra Ericson  <i class="fa fa-external-link"></i></p></a>
+      </section>
       <section data-class="secondary-color-1-1" data-color="#8D0801"></section>
    </div>
 
@@ -206,7 +208,6 @@
 <script>
 
    const sections = document.querySelectorAll('section');
-   console.log(sections);
    document.addEventListener('scroll', () => {
       let index = 1;
 
