--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
             <div class="rect-box secondary-color-0-1">
                <h2 class="primary-color-1-0">Education</h2>
-               <h3 class="primary-color-0-0">I'm in the CRLS class of 2025, and am taking RSTA classes for IT and CS. I've also taken some Harvard classes via HES and dual enrollment/auditing.</h3>
+               <h3 class="primary-color-0-0">I'm studying Computer Science in Cambridge MA, and was a teacher's assistant for some of those classes. I'm also en route to reciving related certificates.</h3>
             </div>
             <div class="rect-box secondary-shadow-1-0">
                <h2 class="primary-color-1-0">Experience</h2>
@@ -99,52 +99,51 @@
          <div class="boxes-container">
             <div class="box primary-color-0-1">
                 <div class="title-container">
-                    <h2>Python Project</h2>
+                    <h2>ML With Python</h2>
                 </div>
                 <div class="content-container">
                     <div class="image-container">
                       <img src="imgs/python.png" alt="Your Image">
                     </div>
                     <div class="text-container">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Rhoncus mattis rhoncus urna neque. Augue mauris augue neque gravida.</p>
+                      <p>For my final project for CS50, I made a flask website that hosted a few different neural networks and algorithms that were able to semi-accurately predict stocks, such that they turned a fair profit in the month I ran them for.</p>
                     </div>
                 </div>
                 <div class="footer-container">
-                    <p>Augue interdum velit euismod in pellentesque massa. Fringilla urna porttitor rhoncus dolor purus non enim. Gravida cum sociis natoque penatibus et. In metus vulputate eu scelerisque felis imperdiet. Tellus molestie nunc non blandit massa enim nec. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Sit amet risus</p>
+                    <p>Python is my goto language if I want to get something done quickly (although that might change, as I am starting to really like Rust.) I have found that the simple syntax and its ability to do almost anything with a few imports is extremely versitle and helpful.</p>
                 </div>
                   
             </div> 
             <div class="box primary-color-0-1">
                 <div class="title-container">
-                    <h2>Java Project</h2>
+                    <h2>Automatic Work Generator</h2>
                 </div>
                 <div class="content-container">
                     <div class="image-container">
                       <img src="imgs/java.png" alt="Your Image">
                     </div>
                     <div class="text-container">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Rhoncus mattis rhoncus urna neque. Augue mauris augue neque gravida.</p>
+                      <p>Not long ago, my history teacher mentioned the annoyingness of having to manually update every single makeup work assignment in Google Classroom. I was able to use java with the Google Classroom API in order to make a lightweight application to automate this process for her.</p>
                     </div>
                 </div>
                 <div class="footer-container">
-                    <p>Augue interdum velit euismod in pellentesque massa. Fringilla urna porttitor rhoncus dolor purus non enim. Gravida cum sociis natoque penatibus et. In metus vulputate eu scelerisque felis imperdiet. Tellus molestie nunc non blandit massa enim nec. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Sit amet risus</p>
-                </div>
+                    <p>I would say I have a love-hate relationship with Java. While I do enjoy some of the simplicity it offers, it has many annoying quirks that stop it from being my favorite language, and so I only use it when I need to make a complileable (is that a word?) application quickly.                </div>
             </div>
     
             <div class="box primary-color-0-1">
                 <div class="title-container">
-                    <h2>HTML/CSS Project</h2>
+                    <h2>This Site!</h2>
                 </div>
                 <div class="content-container">
                     <div class="image-container">
                       <img src="imgs/htcsjs-removebg-preview.png" alt="Your Image">
                     </div>
                     <div class="text-container">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Rhoncus mattis rhoncus urna neque. Augue mauris augue neque gravida.</p>
+                      <p>I have put a large amount of effort into this site. It is, without a doubt, my greatest use of HTML/CSS, and I am very proud of it.</p>
                     </div>
                 </div>
                 <div class="footer-container">
-                    <p>Augue interdum velit euismod in pellentesque massa. Fringilla urna porttitor rhoncus dolor purus non enim. Gravida cum sociis natoque penatibus et. In metus vulputate eu scelerisque felis imperdiet. Tellus molestie nunc non blandit massa enim nec. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Sit amet risus</p>
+                    <p>I will fully admit, I am not a very good designer. I can turn an image into a picture if you give it to me, but I can't make things look nice. I give <b>full</b> credit to the apperance of this website to my good friend, <b>Lyra Ericson</b>. Check out his stuff in the contact page.</p>
                 </div>
             </div>
             <div class="box primary-color-0-1">
@@ -181,18 +180,18 @@
             </div>
             <div class="box primary-color-0-1">
                 <div class="title-container">
-                    <h2>C# Project</h2>
+                    <h2>C# Game with Unity</h2>
                 </div>
                 <div class="content-container">
                     <div class="image-container">
                       <img src="imgs/seesharp.png" alt="Your Image">
                     </div>
                     <div class="text-container">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Rhoncus mattis rhoncus urna neque. Augue mauris augue neque gravida.</p>
+                      <p>I've messed around with C#/Unity quite a few times, to the point that I consider myself quite proficent. I enjoy tinkering around with Unity and seeing what kind of interesting systems I can create.</p>
                     </div>
                 </div>
                 <div class="footer-container">
-                    <p>Augue interdum velit euismod in pellentesque massa. Fringilla urna porttitor rhoncus dolor purus non enim. Gravida cum sociis natoque penatibus et. In metus vulputate eu scelerisque felis imperdiet. Tellus molestie nunc non blandit massa enim nec. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Sit amet risus</p>
+                    <p>Unfortunatly, all of these games have ended up dying after I've made all the systems and need to start implementing art or actual sprites/models-- the aformentioned lack of visual design ability has hampered that idea. However, I have made some fun pranks on friends with C#-- a few backdoors here and there, just unique enough to not trigger windows defender.</p>
                 </div>
             </div>
          </div>
