Updated projects section

--- a/index.html
+++ b/index.html
@@ -148,34 +148,34 @@
             </div>
             <div class="box primary-color-0-1">
                 <div class="title-container">
-                    <h2>SQL Project</h2>
+                    <h2>SQL in ML and Web</h2>
                 </div>
                 <div class="content-container">
                     <div class="image-container">
                       <img src="imgs/sqld.png" alt="Your Image">
                     </div>
                     <div class="text-container">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Rhoncus mattis rhoncus urna neque. Augue mauris augue neque gravida.</p>
+                      <p>I Used SQL in the previously mentioned ML/Website project, where I needed to ensure that users had the correct monetary values, and that the relative profits had stayed the same.</p>
                     </div>
                 </div>
                 <div class="footer-container">
-                    <p>Augue interdum velit euismod in pellentesque massa. Fringilla urna porttitor rhoncus dolor purus non enim. Gravida cum sociis natoque penatibus et. In metus vulputate eu scelerisque felis imperdiet. Tellus molestie nunc non blandit massa enim nec. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Sit amet risus</p>
+                    <p>I enjoy SQL, it's a very logical language once you are familiar with it, and is simple to use. Not much to say about it, to be honest. I very rarely get use of it, as the times when I need to process data in my personal life are few and far between.</p>
                 </div>
             </div>
             <div class="box primary-color-0-1"  style="cursor: pointer;" onclick="window.location='';">
                 <div class="title-container">
-                    <h2>JS Project</h2>
+                    <h2>JS Projects (misc)</h2>
                 </div>
                 <div class="content-container">
                     <div class="image-container">
                       <img src="imgs/js.png" alt="Your Image">
                     </div>
                     <div class="text-container">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Rhoncus mattis rhoncus urna neque. Augue mauris augue neque gravida.</p>
+                      <p>I've used JS frequently, out of necessity. I've used it for this site, I use it to make sure the extensions I install aren't malware, I use it to make my own extensions, and I use node to run various projects like Aspine, an alternate site for students to view their grades.</p>
                     </div>
                 </div>
                 <div class="footer-container">
-                    <p>Augue interdum velit euismod in pellentesque massa. Fringilla urna porttitor rhoncus dolor purus non enim. Gravida cum sociis natoque penatibus et. In metus vulputate eu scelerisque felis imperdiet. Tellus molestie nunc non blandit massa enim nec. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Sit amet risus</p>
+                    <p>However, do not mistake this frequent usage for enjoyment of the language. I don't have a love-hate relationship with JS, not an on again off again relationship, I <b>HATE</b> JS. It is by far my least favorite langague, and if you want me to use it, ask very nicely.</p>
                 </div>
             </div>
             <div class="box primary-color-0-1">
