--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
             </div>
          </div>
       </section>
-      <section target="_blank" rel="nofollow noopener" data-class="secondary-color-0-1" id="contact" style="display: flex; flex-direction:column; justify-content: center;" data-color="#042334">
-        <a style="margin:auto; " title="Contacting Ari" href="mailto:alavine171@gmail.com"><img src="Contact.png"></a>
+      <section  data-class="secondary-color-0-1" id="contact" style="display: flex; flex-direction:column; justify-content: center;" data-color="#042334">
+        <a target="_blank" rel="nofollow noopener" style="margin:auto; " title="Contacting Ari" href="mailto:alavine171@gmail.com"><img src="Contact.png"></a>
         <a href="https://66a4e5a8-d05c-4056-8f44-1d5a47ab5efb-00-89kpnsddjqfz.kirk.replit.dev/"><p  style="font-size: 2rem; color:white; margin-right:auto;align-self:flex-end">Design by Lyra Ericson  <i class="fa fa-external-link"></i></p></a>
       </section>
       <section data-class="secondary-color-1-1" data-color="#8D0801"></section>
