--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     </div>
                 </div>
                 <div class="footer-container">
-                    <p>However, do not mistake this frequent usage for enjoyment of the language. I don't have a love-hate relationship with JS, not an on again off again relationship, I <b>HATE</b> JS. It is by far my least favorite langague, and if you want me to use it, ask very nicely.</p>
+                    <p>However, do not mistake this frequent usage for enjoyment of the language. I don't have a love-hate relationship with JS, not an on again off again relationship, I <b>HATE</b> JS. It is by far my least favorite langague, and if you want me to use it, you better have a damn good reason.</p>
                 </div>
             </div>
             <div class="box primary-color-0-1">
@@ -196,7 +196,7 @@
             </div>
          </div>
       </section>
-      <section  data-class="secondary-color-0-1" id="contact" style="display: flex; flex-direction:column; justify-content: center;" data-color="#042334">
+  12    <section  data-class="secondary-color-0-1" id="contact" style="display: flex; flex-direction:column; justify-content: center;" data-color="#042334">
         <a target="_blank" rel="nofollow noopener" style="margin:auto; " title="Contacting Ari" href="mailto:alavine171@gmail.com"><img src="Contact.png"></a>
         <a href="https://66a4e5a8-d05c-4056-8f44-1d5a47ab5efb-00-89kpnsddjqfz.kirk.replit.dev/"><p  style="font-size: 2rem; color:white; margin-right:auto;align-self:flex-end">Design by Lyra Ericson  <i class="fa fa-external-link"></i></p></a>
       </section>
