--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <img src="tag16_05_00000 (1).png" style="object-fit: contain; height:101%" alt="Moon">
          </div>
          <div class="qoutes-container">
-            <h3 class="qoute secondary-shadow-0-0 right">“We do this not because it was easy, but because we thought it to be easy”</h3>
-            <h3 class="qoute secondary-shadow-0-0 sub-right">- The Creed</h3>
+            <h3 class="qoute secondary-shadow-0-0 right">“Much found in fury signifying nothing”</h3>
+            <h3 class="qoute secondary-shadow-0-0 sub-right">- Shakespeare</h3>
             <h3 class="qoute secondary-shadow-0-0 left">“The way to get started is to quit talking and begin doing.”</h3>
             <h3 class="qoute secondary-shadow-0-0 sub-left">- Walt Disney</h3>
          </div>
