Updated projects section

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <section data-class="primary-color-1-1" id="portfolio" data-color="#ADB2C2">
          <h1 class="primary-color-0-0 portfolio-header">My Projects</h1>
          <div class="boxes-container">
-            <div class="box primary-color-0-1">
+            <div class="box primary-color-0-1" style="cursor:pointer;" onclick="window.location='project.html?python';">
                 <div class="title-container">
                     <h2>ML With Python</h2>
                 </div>
@@ -114,7 +114,7 @@
                 </div>
                   
             </div> 
-            <div class="box primary-color-0-1">
+            <div class="box primary-color-0-1" style="cursor:pointer;" onclick="window.location='project.html?java';">
                 <div class="title-container">
                     <h2>Automatic Work Generator</h2>
                 </div>
@@ -130,7 +130,7 @@
                     <p>I would say I have a love-hate relationship with Java. While I do enjoy some of the simplicity it offers, it has many annoying quirks that stop it from being my favorite language, and so I only use it when I need to make a complileable (is that a word?) application quickly.                </div>
             </div>
     
-            <div class="box primary-color-0-1">
+            <div class="box primary-color-0-1" style="cursor:pointer;" onclick="window.location='project.html?html';">
                 <div class="title-container">
                     <h2>This Site!</h2>
                 </div>
@@ -143,10 +143,10 @@
                     </div>
                 </div>
                 <div class="footer-container">
-                    <p>I will fully admit, I am not a very good designer. I can turn an image into a picture if you give it to me, but I can't make things look nice. I give <b>full</b> credit to the apperance of this website to my good friend, <b>Lyra Ericson</b>. Check out his stuff in the contact page.</p>
+                    <p>While creative design is not my forte, I can turn an image into a picture if you give it to me. I give <b>full</b> credit to the apperance of this website to my good friend, <b>Lyra Ericson</b>. Check out his stuff in the contact page.</p>
                 </div>
             </div>
-            <div class="box primary-color-0-1">
+            <div class="box primary-color-0-1" style="cursor:pointer;" onclick="window.location='project.html?sql';">
                 <div class="title-container">
                     <h2>SQL in ML and Web</h2>
                 </div>
@@ -162,7 +162,7 @@
                     <p>I enjoy SQL, it's a very logical language once you are familiar with it, and is simple to use. Not much to say about it, to be honest. I very rarely get use of it, as the times when I need to process data in my personal life are few and far between.</p>
                 </div>
             </div>
-            <div class="box primary-color-0-1"  style="cursor: pointer;" onclick="window.location='';">
+            <div class="box primary-color-0-1"  style="cursor: pointer;" onclick="window.location='project.html?js';">
                 <div class="title-container">
                     <h2>JS Projects (misc)</h2>
                 </div>
@@ -178,7 +178,7 @@
                     <p>However, do not mistake this frequent usage for enjoyment of the language. I don't have a love-hate relationship with JS, not an on again off again relationship, I <b>HATE</b> JS. It is by far my least favorite langague, and if you want me to use it, you better have a damn good reason.</p>
                 </div>
             </div>
-            <div class="box primary-color-0-1">
+            <div class="box primary-color-0-1" style="cursor:pointer;" onclick="window.location='project.html?csharp';">
                 <div class="title-container">
                     <h2>C# Game with Unity</h2>
                 </div>
