color/stylistic changes

--- a/project.html
+++ b/project.html
@@ -19,7 +19,7 @@
        
     <!-- Add your CSS links or styles here -->
 </head>
-<body style="background-color:#042334">
+<body style="background-color:#91aa9c">
     <!-- Your content goes here -->
     <!-- <div class="container">
         
