--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <img src="tag16_05_00000 (1).png" style="object-fit: contain; height:101%" alt="Moon">
          </div>
          <div class="qoutes-container">
-            <h3 class="qoute secondary-shadow-0-0 right">“No great mind has ever existed without a touch of madness.”</h3>
-            <h3 class="qoute secondary-shadow-0-0 sub-right">- Aristotle</h3>
+            <h3 class="qoute secondary-shadow-0-0 right">“The best science comes from those who are fundamentally curious.”</h3>
+            <h3 class="qoute secondary-shadow-0-0 sub-right">- Angelika Amon</h3>
             <h3 class="qoute secondary-shadow-0-0 left">“The way to get started is to quit talking and begin doing.”</h3>
             <h3 class="qoute secondary-shadow-0-0 sub-left">- Walt Disney</h3>
          </div>
@@ -75,15 +75,15 @@
             </div>
             <div class="rect-box secondary-shadow-1-0">
                <h2 class="primary-color-1-0">Personal</h2>
-               <h3 class="primary-color-0-0">I'm Ari! I love to code, and have enjoyed it ever since I was introduced in 2021 by my teachers. I'm based out of Cambridge MA, and hope to learn more about the world via code.</h3>
+               <h3 class="primary-color-0-0">I'm Ari! I love to code, cook, play violin, and solve problems. I'm based out of Cambridge MA, and hope to learn more about the world via code.</h3>
             </div>
             <div class="rect-box secondary-color-0-1">
                <h2 class="primary-color-1-0">Education</h2>
-               <h3 class="primary-color-0-0">I'm studying Computer Science in Cambridge MA, and was a teacher's assistant for some of those classes. I'm also en route to reciving related certificates.</h3>
+               <h3 class="primary-color-0-0">I'm studying Computer Science in Cambridge MA, I took Data Science through Harvard when I was 15 and took CS50 at Harvard when I was a junior in high school.</h3>
             </div>
             <div class="rect-box secondary-shadow-1-0">
                <h2 class="primary-color-1-0">Experience</h2>
-               <h3 class="primary-color-0-0">I've had a few retail-type jobs, and I also have done a considerable amount of volunteer work with Cambridge Neighbors, helping seniors with tech.</h3>
+               <h3 class="primary-color-0-0">I've worked retail, been a teaching assistant for CS at my high school, and have volunteered through Cambridge Neighbors, helping elders with tech problems.</h3>
      
             </div>
             <div class="rect-box secondary-color-0-1">
