Updated project header and education message

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
             <div class="rect-box secondary-color-0-1">
                <h2 class="primary-color-1-0">Education</h2>
-               <h3 class="primary-color-0-0">I'm studying Computer Science in Cambridge MA, I took Data Science through Harvard when I was 15 and took CS50 at Harvard when I was a junior in high school.</h3>
+               <h3 class="primary-color-0-0">I'm studying Computer Science in Cambridge MA. I a took few Data Science classes through Harvard when in was 15, and took CS50 at Harvard in my junior year (17).</h3>
             </div>
             <div class="rect-box secondary-shadow-1-0">
                <h2 class="primary-color-1-0">Experience</h2>
