--- a/project.html
+++ b/project.html
@@ -28,7 +28,7 @@
        <header class="sticky-top">
          <nav class="navbar navbar-expand-lg primary-color-0-1 navbar-expand navbar-dark bd-navbar sticky-top">
             <div class="container-fluid">
-               <a class="navbar-brand primary-color-1-0 p-0 me-0 me-lg-2" href="#">
+               <a class="navbar-brand primary-color-1-0 p-0 me-0 me-lg-2" href="index.html">
                   <img src="favicon.ico" width="30" height="30" class='d-inline-block align-left' , alt="icon">
                   Ari Lavine
                </a>
