--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
          <div class="carousel-wrapper">
             <div class="carousel">
         
-              <div class="carousel__photo"><img style="cursor:pointer;" onclick="window.location='project.html?python';" src="imgs/pythony.png"><div class="footer-container"><p>Python Project: Machine Learning</p></div></div>
-              <div class="carousel__photo initial"><img style="cursor:pointer;" onclick="window.location='project.html?csharp';" src="imgs/csharp.png"> <div class="footer-container"><p>C# Project: Unity & Misc</p></div></div>
+              <div class="carousel__photo initial"><img style="cursor:pointer;" onclick="window.location='project.html?python';" src="imgs/pythony.png"><div class="footer-container"><p>Python Project: Machine Learning</p></div></div>
+              <div class="carousel__photo"><img style="cursor:pointer;" onclick="window.location='project.html?csharp';" src="imgs/csharp.png"> <div class="footer-container"><p>C# Project: Unity & Misc</p></div></div>
               <div class="carousel__photo"><img style="cursor:pointer;" onclick="window.location='project.html?java';" src="imgs/java.png"> <div class="footer-container"><p>Java Project: Autograder/Assignment Creator</p></div></div>
               <div class="carousel__photo"><img style="cursor:pointer;" onclick="window.location='project.html?html';" src="imgs/htmljscss.png"><div class="footer-container"><p>HTML/CSS Project: This Site!</p></div></div>
               <div class="carousel__photo"><img style="cursor:pointer;" onclick="window.location='project.html?js';" src="imgs/tsjs.png"> <div class="footer-container"><p>JS/TS Project: Aspine &  Misc</p></div></div>
